parser.output
Terminals unused in grammar

    STRING


Grammar

    0 $accept: game $end

    1 game: point BREAKLINE

    2 point: header BREAKLINE dispute BREAKLINE point
    3      | ACAO SPACE FINALIZAR

    4 header: TITULO SPACE title_line

    5 title_line: title
    6           | title_line SPACE title

    7 title: WORD

    8 dispute: ACAO SPACE action

    9 action: SAQUE LEFT_PARENTHESIS TIPO COMMA FORCA RIGHT_PARENTHESIS BREAKLINE dispute
   10       | REBATER LEFT_PARENTHESIS DIRECAO COMMA FORCA RIGHT_PARENTHESIS BREAKLINE dispute
   11       | CORRER LEFT_PARENTHESIS DIRECAO RIGHT_PARENTHESIS BREAKLINE dispute
   12       | MARCAR_PONTO BREAKLINE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    STRING (258)
    WORD (259) 7
    TITULO (260) 4
    LEFT_PARENTHESIS (261) 9 10 11
    RIGHT_PARENTHESIS (262) 9 10 11
    SAQUE (263) 9
    REBATER (264) 10
    CORRER (265) 11
    MARCAR_PONTO (266) 12
    FINALIZAR (267) 3
    TIPO (268) 9
    DIRECAO (269) 10 11
    BREAKLINE (270) 1 2 9 10 11 12
    SPACE (271) 3 4 6 8
    COMMA (272) 9 10
    ACAO (273) 3 8
    FORCA (274) 9 10


Nonterminals, with rules where they appear

    $accept (20)
        on left: 0
    game (21)
        on left: 1
        on right: 0
    point (22)
        on left: 2 3
        on right: 1 2
    header (23)
        on left: 4
        on right: 2
    title_line (24)
        on left: 5 6
        on right: 4 6
    title (25)
        on left: 7
        on right: 5 6
    dispute (26)
        on left: 8
        on right: 2 9 10 11
    action (27)
        on left: 9 10 11 12
        on right: 8


State 0

    0 $accept: . game $end

    TITULO  shift, and go to state 1
    ACAO    shift, and go to state 2

    game    go to state 3
    point   go to state 4
    header  go to state 5


State 1

    4 header: TITULO . SPACE title_line

    SPACE  shift, and go to state 6


State 2

    3 point: ACAO . SPACE FINALIZAR

    SPACE  shift, and go to state 7


State 3

    0 $accept: game . $end

    $end  shift, and go to state 8


State 4

    1 game: point . BREAKLINE

    BREAKLINE  shift, and go to state 9


State 5

    2 point: header . BREAKLINE dispute BREAKLINE point

    BREAKLINE  shift, and go to state 10


State 6

    4 header: TITULO SPACE . title_line

    WORD  shift, and go to state 11

    title_line  go to state 12
    title       go to state 13


State 7

    3 point: ACAO SPACE . FINALIZAR

    FINALIZAR  shift, and go to state 14


State 8

    0 $accept: game $end .

    $default  accept


State 9

    1 game: point BREAKLINE .

    $default  reduce using rule 1 (game)


State 10

    2 point: header BREAKLINE . dispute BREAKLINE point

    ACAO  shift, and go to state 15

    dispute  go to state 16


State 11

    7 title: WORD .

    $default  reduce using rule 7 (title)


State 12

    4 header: TITULO SPACE title_line .
    6 title_line: title_line . SPACE title

    SPACE  shift, and go to state 17

    $default  reduce using rule 4 (header)


State 13

    5 title_line: title .

    $default  reduce using rule 5 (title_line)


State 14

    3 point: ACAO SPACE FINALIZAR .

    $default  reduce using rule 3 (point)


State 15

    8 dispute: ACAO . SPACE action

    SPACE  shift, and go to state 18


State 16

    2 point: header BREAKLINE dispute . BREAKLINE point

    BREAKLINE  shift, and go to state 19


State 17

    6 title_line: title_line SPACE . title

    WORD  shift, and go to state 11

    title  go to state 20


State 18

    8 dispute: ACAO SPACE . action

    SAQUE         shift, and go to state 21
    REBATER       shift, and go to state 22
    CORRER        shift, and go to state 23
    MARCAR_PONTO  shift, and go to state 24

    action  go to state 25


State 19

    2 point: header BREAKLINE dispute BREAKLINE . point

    TITULO  shift, and go to state 1
    ACAO    shift, and go to state 2

    point   go to state 26
    header  go to state 5


State 20

    6 title_line: title_line SPACE title .

    $default  reduce using rule 6 (title_line)


State 21

    9 action: SAQUE . LEFT_PARENTHESIS TIPO COMMA FORCA RIGHT_PARENTHESIS BREAKLINE dispute

    LEFT_PARENTHESIS  shift, and go to state 27


State 22

   10 action: REBATER . LEFT_PARENTHESIS DIRECAO COMMA FORCA RIGHT_PARENTHESIS BREAKLINE dispute

    LEFT_PARENTHESIS  shift, and go to state 28


State 23

   11 action: CORRER . LEFT_PARENTHESIS DIRECAO RIGHT_PARENTHESIS BREAKLINE dispute

    LEFT_PARENTHESIS  shift, and go to state 29


State 24

   12 action: MARCAR_PONTO . BREAKLINE

    BREAKLINE  shift, and go to state 30


State 25

    8 dispute: ACAO SPACE action .

    $default  reduce using rule 8 (dispute)


State 26

    2 point: header BREAKLINE dispute BREAKLINE point .

    $default  reduce using rule 2 (point)


State 27

    9 action: SAQUE LEFT_PARENTHESIS . TIPO COMMA FORCA RIGHT_PARENTHESIS BREAKLINE dispute

    TIPO  shift, and go to state 31


State 28

   10 action: REBATER LEFT_PARENTHESIS . DIRECAO COMMA FORCA RIGHT_PARENTHESIS BREAKLINE dispute

    DIRECAO  shift, and go to state 32


State 29

   11 action: CORRER LEFT_PARENTHESIS . DIRECAO RIGHT_PARENTHESIS BREAKLINE dispute

    DIRECAO  shift, and go to state 33


State 30

   12 action: MARCAR_PONTO BREAKLINE .

    $default  reduce using rule 12 (action)


State 31

    9 action: SAQUE LEFT_PARENTHESIS TIPO . COMMA FORCA RIGHT_PARENTHESIS BREAKLINE dispute

    COMMA  shift, and go to state 34


State 32

   10 action: REBATER LEFT_PARENTHESIS DIRECAO . COMMA FORCA RIGHT_PARENTHESIS BREAKLINE dispute

    COMMA  shift, and go to state 35


State 33

   11 action: CORRER LEFT_PARENTHESIS DIRECAO . RIGHT_PARENTHESIS BREAKLINE dispute

    RIGHT_PARENTHESIS  shift, and go to state 36


State 34

    9 action: SAQUE LEFT_PARENTHESIS TIPO COMMA . FORCA RIGHT_PARENTHESIS BREAKLINE dispute

    FORCA  shift, and go to state 37


State 35

   10 action: REBATER LEFT_PARENTHESIS DIRECAO COMMA . FORCA RIGHT_PARENTHESIS BREAKLINE dispute

    FORCA  shift, and go to state 38


State 36

   11 action: CORRER LEFT_PARENTHESIS DIRECAO RIGHT_PARENTHESIS . BREAKLINE dispute

    BREAKLINE  shift, and go to state 39


State 37

    9 action: SAQUE LEFT_PARENTHESIS TIPO COMMA FORCA . RIGHT_PARENTHESIS BREAKLINE dispute

    RIGHT_PARENTHESIS  shift, and go to state 40


State 38

   10 action: REBATER LEFT_PARENTHESIS DIRECAO COMMA FORCA . RIGHT_PARENTHESIS BREAKLINE dispute

    RIGHT_PARENTHESIS  shift, and go to state 41


State 39

   11 action: CORRER LEFT_PARENTHESIS DIRECAO RIGHT_PARENTHESIS BREAKLINE . dispute

    ACAO  shift, and go to state 15

    dispute  go to state 42


State 40

    9 action: SAQUE LEFT_PARENTHESIS TIPO COMMA FORCA RIGHT_PARENTHESIS . BREAKLINE dispute

    BREAKLINE  shift, and go to state 43


State 41

   10 action: REBATER LEFT_PARENTHESIS DIRECAO COMMA FORCA RIGHT_PARENTHESIS . BREAKLINE dispute

    BREAKLINE  shift, and go to state 44


State 42

   11 action: CORRER LEFT_PARENTHESIS DIRECAO RIGHT_PARENTHESIS BREAKLINE dispute .

    $default  reduce using rule 11 (action)


State 43

    9 action: SAQUE LEFT_PARENTHESIS TIPO COMMA FORCA RIGHT_PARENTHESIS BREAKLINE . dispute

    ACAO  shift, and go to state 15

    dispute  go to state 45


State 44

   10 action: REBATER LEFT_PARENTHESIS DIRECAO COMMA FORCA RIGHT_PARENTHESIS BREAKLINE . dispute

    ACAO  shift, and go to state 15

    dispute  go to state 46


State 45

    9 action: SAQUE LEFT_PARENTHESIS TIPO COMMA FORCA RIGHT_PARENTHESIS BREAKLINE dispute .

    $default  reduce using rule 9 (action)


State 46

   10 action: REBATER LEFT_PARENTHESIS DIRECAO COMMA FORCA RIGHT_PARENTHESIS BREAKLINE dispute .

    $default  reduce using rule 10 (action)
